--- a/CoffeeConnect.Models/CoffeeConnect.Models.csproj
+++ b/CoffeeConnect.Models/CoffeeConnect.Models.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoffeeListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
