--- a/CoffeeConnect.Models/CoffeeConnect.Models.csproj
+++ b/CoffeeConnect.Models/CoffeeConnect.Models.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="CoffeeCreate.cs" />
     <Compile Include="CoffeeDetail.cs" />
+    <Compile Include="CoffeeEdit.cs" />
     <Compile Include="CoffeeListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
