--- a/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
+++ b/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Coffee\Index.cshtml" />
     <Content Include="Views\Coffee\Create.cshtml" />
     <Content Include="Views\Coffee\Details.cshtml" />
+    <Content Include="Views\Coffee\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
