--- a/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
+++ b/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Coffee\Create.cshtml" />
     <Content Include="Views\Coffee\Details.cshtml" />
     <Content Include="Views\Coffee\Edit.cshtml" />
+    <Content Include="Views\Coffee\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
