--- a/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
+++ b/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CoffeeController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -240,6 +241,8 @@
     <Content Include="Views\Coffee\Details.cshtml" />
     <Content Include="Views\Coffee\Edit.cshtml" />
     <Content Include="Views\Coffee\Delete.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
