Added view methods

--- a/CoffeeConnect.Data/CoffeeConnect.Data.csproj
+++ b/CoffeeConnect.Data/CoffeeConnect.Data.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\202111231932402_changedservice.Designer.cs">
       <DependentUpon>202111231932402_changedservice.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111242127144_tookoutFK.cs" />
+    <Compile Include="Migrations\202111242127144_tookoutFK.Designer.cs">
+      <DependentUpon>202111242127144_tookoutFK.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -85,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111231932402_changedservice.resx">
       <DependentUpon>202111231932402_changedservice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111242127144_tookoutFK.resx">
+      <DependentUpon>202111242127144_tookoutFK.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
