--- a/CoffeeConnect.Services/CoffeeConnect.Services.csproj
+++ b/CoffeeConnect.Services/CoffeeConnect.Services.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoffeeService.cs" />
+    <Compile Include="CustomerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
