Added edit method for customer

--- a/CoffeeConnect.Models/CoffeeConnect.Models.csproj
+++ b/CoffeeConnect.Models/CoffeeConnect.Models.csproj
@@ -59,6 +59,8 @@
     <Compile Include="CoffeeEdit.cs" />
     <Compile Include="CoffeeListItem.cs" />
     <Compile Include="CustomerCreate.cs" />
+    <Compile Include="CustomerDetail.cs" />
+    <Compile Include="CustomerEdit.cs" />
     <Compile Include="CustomerListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
