--- a/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
+++ b/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
@@ -243,6 +243,7 @@
     <Content Include="Views\Coffee\Delete.cshtml" />
     <Content Include="Views\Customer\Create.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
