--- a/CoffeeConnect.Data/CoffeeConnect.Data.csproj
+++ b/CoffeeConnect.Data/CoffeeConnect.Data.csproj
@@ -75,6 +75,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Purchase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
