--- a/CoffeeConnect.Models/CoffeeConnect.Models.csproj
+++ b/CoffeeConnect.Models/CoffeeConnect.Models.csproj
@@ -63,6 +63,8 @@
     <Compile Include="CustomerEdit.cs" />
     <Compile Include="CustomerListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchaseCreate.cs" />
+    <Compile Include="PurchaseListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
