--- a/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
+++ b/CoffeeConnect.WebMVC/CoffeeConnect.WebMVC.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Purchase\Index.cshtml" />
     <Content Include="Views\Purchase\Details.cshtml" />
     <Content Include="Views\Purchase\Edit.cshtml" />
+    <Content Include="Views\Purchase\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
